root/assets/css/style.css
/* ... */
address, caption, cite, code, dfn, em, strong, th, var {
  font-style: normal; }

html {
  font-size: 62.5%;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -ms-overflow-style: scrollbar;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }

body {
  margin: 0;
  padding: 0;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%; }

body p {
  display: block;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0; }

body, table, button,
input, textarea, select, option,
h1, h2, h3, h4, h5, h6 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "Noto Sans Lao", sans-serif; }

h1, h2, h3, h4, h5, h6 {
  font-size: 100%;
  text-align: left;
  font-weight: normal; }

img, abbr, acronym, fieldset {
  border: 0; }

input, textarea, select, option {
  line-height: 1.1; }

input[type="submit"], button {
  border-radius: 0;
  -webkit-appearance: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

ol, ul {
  list-style: none; }

li {
  list-style-type: none; }

blockquote, q {
  quotes: none; }

:focus {
  outline: 0; }

ins {
  text-decoration: none; }

del {
  text-decoration: line-through; }

img {
  vertical-align: top; }

hr {
  -webkit-box-sizing: content-box;
          box-sizing: content-box;
  overflow: visible;
  height: 0; }

sub, sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline; }

sub {
  bottom: -.25em; }

sup {
  top: -.5em; }

pre {
  margin-top: 0;
  margin-bottom: 1rem;
  overflow: auto;
  -ms-overflow-style: scrollbar; }

b, strong {
  font-weight: bolder; }

a {
  color: inherit;
  text-decoration: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease; }
  a:focus {
    outline: none; }
  a img {
    -webkit-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out; }

img {
  margin: 0;
  padding: 0;
  border: 0;
  max-width: 100%;
  vertical-align: middle;
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover; }

/*------------------------------------------------------------
for develop
------------------------------------------------------------*/
#__bs_notify__ {
  opacity: 0.3 !important;
  font-size: 5px !important;
  line-height: 100% !important;
  padding: 0 5px 0 5px !important;
  border-radius: 0 !important; }

.c-dev-title1 {
  background: #000;
  color: #fff;
  line-height: 1;
  padding: 6px 0 6px 15px;
  font-size: 1.6rem;
  margin: 60px 0 20px 0; }

.c-dev-title2 {
  background: #888;
  color: #fff;
  line-height: 1;
  padding: 6px 0 6px 30px;
  font-size: 1.3rem;
  margin: 50px 0 10px 0; }

.c-dev-message1 {
  top: 0;
  left: 0;
  background: #f00;
  color: #fff;
  z-index: 9999;
  position: fixed;
  line-height: 1;
  padding: 3px 6px;
  opacity: 0.6;
  font-size: 8px; }

/*------------------------------------------------------------
breadcrumb
------------------------------------------------------------*/
/*------------------------------------------------------------
footer
------------------------------------------------------------*/
.c-footer {
  color: #ffffff; }
  .c-footer__txt {
    font-size: 1.6rem;
    line-height: 2; }
    .c-footer__txt .fa-paw {
      color: orange; }
  .c-footer__advise {
    padding: 30px 0;
    background: #ADD8E6 url(/assets/img/common/bg-footer.svg);
    text-align: center; }
    .c-footer__advise .c-title2 {
      text-align: center; }
  .c-footer__form {
    position: relative;
    width: 50%;
    margin: 15px auto;
    margin-bottom: 0; }
    @media screen and (max-width: 767px) {
      .c-footer__form {
        width: 80%; } }
    @media screen and (max-width: 500px) {
      .c-footer__form {
        width: 100%; } }
    .c-footer__form input {
      width: 90%;
      font-size: 1.6rem;
      line-height: 1.5;
      padding: 16px 0 16px 16px;
      border-radius: 50px;
      border: none; }
      @media screen and (max-width: 767px) {
        .c-footer__form input {
          border-radius: 5px;
          font-size: 1.3rem;
          line-height: 1.5; } }
    .c-footer__form button {
      position: absolute;
      right: 0;
      top: 0;
      bottom: 0;
      font-size: 1.6rem;
      line-height: 1.5;
      padding: 16px 32px;
      border-radius: 50px;
      border: none;
      font-weight: 600;
      color: white;
      cursor: pointer;
      background-color: #00BFFF; }
      .c-footer__form button:hover {
        background-color: #FF0000;
        -webkit-transition: all 0.3s ease-in-out;
        transition: all 0.3s ease-in-out; }
      @media screen and (max-width: 767px) {
        .c-footer__form button {
          border-radius: 5px;
          font-size: 1.3rem;
          padding: 16px 23px;
          line-height: 1.5; } }
  .c-footer__info {
    background-color: #045de9;
    background-image: -webkit-linear-gradient(135deg, #09c6f9 0%, #045de9 74%);
    background-image: linear-gradient(315deg, #09c6f9 0%, #045de9 74%); }
    .c-footer__info .c-title2 {
      font-size: 2rem;
      margin: 16px 0; }
      @media screen and (max-width: 767px) {
        .c-footer__info .c-title2 {
          margin-bottom: 0; } }
  .c-footer__content, .c-footer__branch, .c-footer__social {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
    padding: 30px 0; }
  .c-footer__about, .c-footer__service, .c-footer__quote, .c-footer__support {
    width: 25%;
    padding-left: 30px; }
    @media screen and (max-width: 767px) {
      .c-footer__about, .c-footer__service, .c-footer__quote, .c-footer__support {
        padding-left: 10px;
        width: 50%; } }
    @media screen and (max-width: 468px) {
      .c-footer__about, .c-footer__service, .c-footer__quote, .c-footer__support {
        width: 100%; } }
/* ... */

